# ipc_systemcall

./: .gitignore  CMakeLists.txt  README.md
clientExec/: Makefile
clientExec/include/: clientExec.h  invia.h
clientExec/src/: clientExec.c  invia.c  salva  salva.c  stampa.c
clientReq-server/: Makefile
clientReq-server/inc/: clientReq.h  errExit.h  server.h
clientReq-server/include/: clientReq.h  server.h
clientReq-server/src/: clientReq.c  errExit.c  server.c
lib/include/: err_lib.h  exec_lib.h  globals.h  list_lib.h  msg_lib.h  request_lib.h  sem_lib.h  server_lib.h  sig_lib.h  str_lib.h
lib/src/: err_lib.c  exec_lib.c  list_lib.c  msg_lib.c  sem_lib.c  server_lib.c  sig_lib.c  str_lib.c
utils/include/: errExit.h  list_utils.h
utils/src/: errExit.c  list_utils.c
